--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <header class="header">
    <div class="header__top">
         <div class="container">
-         <a class="header__phone" href="tel:31626119569">+3162 611 9569</a>
-         <a class="header__email" href="mailto:oomsnikita@gmail.com">oomsnikita@gmail.com</a>
-         <a class="header__btn" href="">Бесплатная консультация</a>
+            <div class="header__contacts">
+                <a class="header__phone" href="tel:31626119569">+3162 611 9569</a>
+                <a class="header__email" href="mailto:oomsnikita@gmail.com">oomsnikita@gmail.com</a>
+                <a class="header__btn" href="">Бесплатная консультация</a>
+            </div>
         </div>
     </div>
     <div class="header__content">
